# aoc

./: add_task.sh  keybindings.json  task_runner.py
2015/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_16.py  task_17.py  task_18.py
2021/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_16.py
2022/: task_01.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_16.py  task_17.py  task_18.py  task_20.py  task_21.py
2023/: add_next_task.sh  aoc.py  aoc_utils.py  last_task_runner.py  run_all.sh  runner.py  task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py  task_15.py  task_16.py  task_17.py  task_18.py  task_19.py  task_20.py  task_21.py  task_22.py  (+5 more)
cpp/: .gitignore  CMakeLists.txt  add_cpp_task.sh  main.cpp
cpp/2024/inc/: task_2024_01.h  task_2024_02.h  task_yyyy_dd.h.tpl  tasklist.h
cpp/2024/src/: cpp_task.template  task_2024_.cpp.tpl  task_2024_01.cpp  task_2024_02.cpp  task_2024_03.cpp  task_2024_04.cpp  task_yyyy_dd.cpp.tpl
cpp/framework/inc/: aoc_task.h  argument_parser.h  task_factory.h
cpp/framework/src/: aoc_task.cpp  argument_parser.cpp  task_factory.cpp
(+30 files in other folders)
